--- a/ProyectoFinal/Inicio/style.css
+++ b/ProyectoFinal/Inicio/style.css
@@ -52,12 +52,12 @@ h2 {
     margin-bottom: 10px;
 }
 
-.contenedor-peliculas {
+.contenedor-series {
     display: flex;
     gap: 10px;
 }
 
-.pelicula {
+.serie {
     background-color: #e0e0e0;
     width: 100px;
     height: 150px;
@@ -67,13 +67,13 @@ h2 {
     align-items: center;
 }
 
-.pelicula .info {
+.serie .info {
     text-align: center;
     font-size: 14px;
     color: black;
 }
 
-.mejor-calificadas .contenedor-peliculas .pelicula {
+.mejor-calificadas .contenedor-series .serie {
     background-color: #e0e0e0;
 }
 
