--- a/ProyectoFinal/PerfilSerie_Admin/style.css
+++ b/ProyectoFinal/PerfilSerie_Admin/style.css
@@ -15,7 +15,7 @@ body {
 
 }
 
-.PerfilPelicula {
+.Perfilserie {
 
     display: flex;
     align-items: center;
@@ -26,7 +26,7 @@ body {
     justify-content: center;
 }
 
-.foto-PerfilPelicula {
+.foto-Perfilserie {
 
     width: 25%;
     height: 100%;
@@ -40,7 +40,7 @@ body {
     width: 65%;
 }
 
-.pelicula {
+.serie {
     width: 60px;
     height: 100px;
     background-color: #e0e0e0;
@@ -136,7 +136,7 @@ body {
     grid-row-end: 4;
 }
 
-.pelicula-similar {
+.serie-similar {
     width: 75px;
     height: 200px;
     background-color: #e0e0e0;
