--- a/ProyectoFinal/PerfilSerie/style.css
+++ b/ProyectoFinal/PerfilSerie/style.css
@@ -3,6 +3,30 @@ body {
     background-color: #f0f0f0;
 }
 
+header {
+    background-color: #0099ff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    color: white;
+    position: relative; 
+    height: 4vh;
+    border-radius: 10px;
+    margin: 10px 50vh;
+}
+.icono-casa {
+    
+    font-size: 30px;
+    position: absolute;
+    left: 45%;
+}
+.usuario {
+    font-size: 18px;
+    position: absolute;
+    right: 10px;
+}
+
 .gridContainer {
     margin: 0px 50vh;
     background-color: #0099ff;
