--- a/ProyectoFinal/PerfilSerie_Admin/style.css
+++ b/ProyectoFinal/PerfilSerie_Admin/style.css
@@ -2,6 +2,31 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
 }
+header {
+    margin: 0px 50vh;
+    background-color: #0099ff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    color: white;
+    position: relative; 
+    height: 4vh;
+    border-radius: 10px;
+    margin: 10px 50vh;
+}
+.icono-casa {
+    
+    font-size: 30px;
+    position: absolute;
+    left: 45%;
+}
+
+.usuario {
+    font-size: 18px;
+    position: absolute;
+    right: 10px;
+}
 
 .gridContainer {
     margin: 0px 50vh;
