--- a/Episodico_presentacion/src/main/webapp/Feed/Style.css
+++ b/Episodico_presentacion/src/main/webapp/Feed/Style.css
@@ -1,10 +1,17 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0eef0;
+    background: linear-gradient(to right, #8c00ff, #00c6ff);
+}
+
+.Feed{
+    background-color: #222;
+    margin: 10px 50vh;
+
+    padding: 20px;
+    border-radius: 10px;
 }
 
 header {
-    background-color: #0099ff;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -13,7 +20,7 @@ header {
     position: relative; 
     height: 4vh;
     border-radius: 10px;
-    margin: 10px 50vh;
+    padding-bottom: 1cm;
 }
 
 .icono-casa {
@@ -29,15 +36,32 @@ header {
     right: 10px;
 }
 
-.agregadas-recientemente,
-.mejor-calificadas,
-.resenas-recientes {
+.seccion,
+.resenas-recientes{
     
-    background-color: #0099ff;
-    margin: 10px 50vh;
-
     padding: 20px;
     border-radius: 10px;
+    white-space: nowrap;
+    box-shadow: inset 0 0 20px #ffffff42;
+}
+
+.seccion{
+    
+    display: flex;
+    overflow-x: scroll; 
+}
+
+.seccion::-webkit-scrollbar-thumb {
+    background-color: #631919; /* Color del scroll */
+    border-radius: 4px; /* Bordes redondeados */
+}
+
+.seccion::-webkit-scrollbar-thumb:hover {
+    background-color: #6e0f0f; /* Color al pasar el cursor */
+}
+
+.seccion::-webkit-scrollbar-track {
+    background-color: #700303; /* Fondo de la pista del scroll */
 }
 
 h2 {
@@ -104,3 +128,57 @@ h2 {
     font-size: 12px;
     color: #555;
 }
+
+
+#nav{
+    display: flex;
+    height: 60px;
+    border-radius: 40px;    
+    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.041);
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    padding-top: 1cm;
+    
+  }
+  
+  .ul {
+    width: 140%;
+    background-color: transparent;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+  }
+  
+  .ul .li {
+    display: inline-block;
+  }
+  
+  .radio {
+    display: none;
+  }
+  
+  .imgNav {
+    width: 50px;
+    height: 50px;
+    opacity: 80%;
+    cursor: pointer;
+    padding: 13px 20px;
+    transition: 0.2s;
+  }
+  
+  .ul .li .imgNav:hover {
+    transition: 0.1s;
+    color: #8c00ff;
+    position: relative;
+    margin-top: -4px;
+    opacity: 100%;
+  }
+
+  
+
+  .radio:checked + label .li .imgNav {
+    color: #00c6ff;
+    fill-rule: evenodd;
+  }
+  
