--- a/Episodico_presentacion/src/main/webapp/Feed/Style.css
+++ b/Episodico_presentacion/src/main/webapp/Feed/Style.css
@@ -51,18 +51,13 @@ header {
     overflow-x: scroll; 
 }
 
-.seccion::-webkit-scrollbar-thumb {
-    background-color: #631919; /* Color del scroll */
-    border-radius: 4px; /* Bordes redondeados */
+.resenas-recientes{
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    height: 400px;
 }
 
-.seccion::-webkit-scrollbar-thumb:hover {
-    background-color: #6e0f0f; /* Color al pasar el cursor */
-}
-
-.seccion::-webkit-scrollbar-track {
-    background-color: #700303; /* Fondo de la pista del scroll */
-}
 
 h2 {
     color: white;
@@ -95,31 +90,54 @@ h2 {
 }
 
 .resena {
+
+    display: grid;
+    grid-template-columns: 80% 10% 10%;
+    grid-template-rows: 20% 80%;
     background-color: white;
     border-radius: 10px;
-    padding: 15px;
+    padding: 15px ;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    width: 95%;
+    height: 200px;
+    flex:1;
+    margin-bottom: 15px;
+
 }
 
+
 .titulo-resena {
+    grid-column-start: 1;
+    grid-column-end: 6;
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 10px;
+    width: 100%;
+
+    background-color: #00c6ff;
 }
 
-.info-resena {
-    display: flex;
-    justify-content: space-between;
-}
 
 .texto-resena {
-    flex: 2;
+    grid-row-start: 2;
+    grid-row-end: 4;
     padding-right: 15px;
+    margin-right: 15px;
+    background-color: #09b917;
+    text-align: justify; 
+    word-wrap: break-word; 
+    overflow-wrap: break-word; 
+    white-space: normal; 
+    line-height: 1.5;
 }
 
+
 .imagen-resena {
-    background-color: #ccc;
-    flex: 1;
+
+    grid-column-start: 2;
+    grid-column-end: 4;
+    background-color: #e70000;
+    flex: 3;
     border-radius: 5px;
     text-align: center;
     display: flex;
@@ -127,6 +145,10 @@ h2 {
     align-items: center;
     font-size: 12px;
     color: #555;
+    width: 100px;
+    height: 150px;
+    border-radius: 10px;
+    margin-left: 6px;
 }
 
 
