--- a/Episodico_presentacion/src/main/webapp/Feed/Style.css
+++ b/Episodico_presentacion/src/main/webapp/Feed/Style.css
@@ -56,7 +56,7 @@ header {
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
-    height: 400px;
+    height: 230px;
 }
 
 
@@ -71,23 +71,46 @@ h2 {
 }
 
 .serie {
-    background-color: #e0e0e0;
+    background-color: #000000;
     width: 100px;
     height: 150px;
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    overflow: hidden; 
+    cursor: pointer;
 }
 
 .serie .info {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
     font-size: 14px;
-    color: black;
+    color: rgb(255, 255, 255);
+    opacity: 0; 
+    transition: opacity 0.3s ease; 
+    z-index: 2;
 }
 
-.mejor-calificadas .contenedor-series .serie {
-    background-color: #e0e0e0;
+.serie-img{
+    
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: filter 0.3s ease;
+}
+
+
+.serie:hover .serie-img{
+    filter: blur(3px); 
+}
+
+.serie:hover .info {
+    opacity: 1; 
 }
 
 .resena {
@@ -95,41 +118,36 @@ h2 {
     display: grid;
     grid-template-columns: 80% 10% 10%;
     grid-template-rows: 20% 80%;
-    background-color: white;
+    background-color: rgb(214, 212, 212);
     border-radius: 10px;
     padding: 15px ;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     width: 95%;
-    height: 200px;
     flex:1;
     margin-bottom: 15px;
-
 }
 
 
 .titulo-resena {
     grid-column-start: 1;
-    grid-column-end: 6;
+    grid-column-end: 4;
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 10px;
     width: 100%;
-
-    background-color: #00c6ff;
 }
 
 
 .texto-resena {
-    grid-row-start: 2;
-    grid-row-end: 4;
     padding-right: 15px;
-    margin-right: 15px;
-    background-color: #09b917;
+    margin-right: 15px;  
+    margin-left: 10px;
     text-align: justify; 
     word-wrap: break-word; 
     overflow-wrap: break-word; 
     white-space: normal; 
-    line-height: 1.5;
+    overflow-y: scroll;
+    
 }
 
 
@@ -137,19 +155,16 @@ h2 {
 
     grid-column-start: 2;
     grid-column-end: 4;
-    background-color: #e70000;
     flex: 3;
-    border-radius: 5px;
-    text-align: center;
     display: flex;
-    justify-content: center;
-    align-items: center;
     font-size: 12px;
     color: #555;
     width: 100px;
     height: 150px;
     border-radius: 10px;
     margin-left: 6px;
+    overflow: hidden; 
+    border-radius: 15px;
 }
 
 
