--- a/Episodico_presentacion/src/main/webapp/SeriesProfile/Style.css
+++ b/Episodico_presentacion/src/main/webapp/SeriesProfile/Style.css
@@ -9,7 +9,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background: linear-gradient(to right, #8c00ff, #00c6ff);
 }
 
 header {
