--- a/Episodico_presentacion/src/main/webapp/Feed/Style.css
+++ b/Episodico_presentacion/src/main/webapp/Feed/Style.css
@@ -71,7 +71,7 @@ h2 {
 }
 
 .serie {
-    background-color: #000000;
+    background-color: #f0f0f0;
     width: 100px;
     height: 150px;
     border-radius: 10px;
