--- a/Episodico_presentacion/src/main/webapp/Feed/Style.css
+++ b/Episodico_presentacion/src/main/webapp/Feed/Style.css
@@ -3,7 +3,7 @@ body {
     background: linear-gradient(to right, #8c00ff, #00c6ff);
 }
 
-.Feed{
+.Feed {
     background-color: #222;
     margin: 10px 50vh;
 
@@ -17,7 +17,7 @@ header {
     align-items: center;
     padding: 10px 20px;
     color: white;
-    position: relative; 
+    position: relative;
     height: 4vh;
     border-radius: 10px;
     padding-bottom: 1cm;
@@ -25,7 +25,7 @@ header {
 }
 
 .icono-casa {
-    
+
     font-size: 30px;
     position: absolute;
     left: 45%;
@@ -38,21 +38,21 @@ header {
 }
 
 .seccion,
-.resenas-recientes{
-    
+.resenas-recientes {
+
     padding: 20px;
     border-radius: 10px;
     white-space: nowrap;
     box-shadow: inset 0 0 20px #ffffff42;
 }
 
-.seccion{
-    
+.seccion {
+
     display: flex;
-    overflow-x: scroll; 
+    overflow-x: scroll;
 }
 
-.resenas-recientes{
+.resenas-recientes {
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
@@ -79,7 +79,7 @@ h2 {
     justify-content: center;
     align-items: center;
     position: relative;
-    overflow: hidden; 
+    overflow: hidden;
     cursor: pointer;
 }
 
@@ -91,13 +91,13 @@ h2 {
     text-align: center;
     font-size: 14px;
     color: rgb(255, 255, 255);
-    opacity: 0; 
-    transition: opacity 0.3s ease; 
+    opacity: 0;
+    transition: opacity 0.3s ease;
     z-index: 2;
 }
 
-.serie-img{
-    
+.serie-img {
+
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -105,12 +105,12 @@ h2 {
 }
 
 
-.serie:hover .serie-img{
-    filter: blur(3px); 
+.serie:hover .serie-img {
+    filter: blur(3px);
 }
 
 .serie:hover .info {
-    opacity: 1; 
+    opacity: 1;
 }
 
 .resena {
@@ -120,10 +120,10 @@ h2 {
     grid-template-rows: 20% 80%;
     background-color: rgb(214, 212, 212);
     border-radius: 10px;
-    padding: 15px ;
+    padding: 15px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     width: 95%;
-    flex:1;
+    flex: 1;
     margin-bottom: 15px;
 }
 
@@ -140,14 +140,14 @@ h2 {
 
 .texto-resena {
     padding-right: 15px;
-    margin-right: 15px;  
+    margin-right: 15px;
     margin-left: 10px;
-    text-align: justify; 
-    word-wrap: break-word; 
-    overflow-wrap: break-word; 
-    white-space: normal; 
+    text-align: justify;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
     overflow-y: scroll;
-    
+
 }
 
 
@@ -163,60 +163,62 @@ h2 {
     height: 150px;
     border-radius: 10px;
     margin-left: 6px;
-    overflow: hidden; 
+    overflow: hidden;
     border-radius: 15px;
 }
 
 
-#nav{
+nav {
     display: flex;
     height: 60px;
-    border-radius: 40px;    
-    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.041);
+    border-radius: 40px;
     align-items: center;
     justify-content: center;
     display: flex;
     padding-top: 1cm;
     width: 100%;
-  }
-  
-  .ul {
+    border: none;
+
+}
+
+.ul {
     width: 100%;
     background-color: transparent;
     display: flex;
     justify-content: space-between;
     margin-top: 5px;
-  }
-  
-  .ul .li {
+}
+
+.ul .li {
     display: inline-block;
-  }
-  
-  .radio {
+    background: none;
+    border: none;
+}
+
+.radio {
     display: none;
-  }
-  
-  .imgNav {
+}
+
+.imgNav {
     width: 50px;
     height: 50px;
     opacity: 80%;
     cursor: pointer;
     padding: 13px 20px;
     transition: 0.2s;
-  }
-  
-  .ul .li .imgNav:hover {
+}
+
+button:hover {
     transition: 0.1s;
     color: #8c00ff;
     position: relative;
     margin-top: -4px;
     opacity: 100%;
-  }
+}
 
-  
 
-  .radio:checked + label .li .imgNav {
+
+.checked+.li .imgNav {
     color: #00c6ff;
     fill-rule: evenodd;
-  }
-  
+}
