--- a/Episodico_presentacion/src/main/webapp/UserProfile/Style.css
+++ b/Episodico_presentacion/src/main/webapp/UserProfile/Style.css
@@ -35,6 +35,7 @@ header {
     overflow: hidden;
 
 }
+
 body {
     font-family: Arial, sans-serif;
     background: linear-gradient(to right, #8c00ff, #00c6ff);
@@ -60,6 +61,66 @@ header {
     padding-bottom: 1cm;
     width: 95.7%;
 }
+
+
+nav {
+    display: flex;
+    height: 60px;
+    border-radius: 40px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    padding-top: 1cm;
+    width: 100%;
+    border: none;
+
+}
+
+.ul {
+    width: 100%;
+    background-color: transparent;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+}
+
+.ul .li {
+    display: inline-block
+}
+
+button {
+    border: none;
+}
+
+.radio {
+    display: none;
+}
+
+.imgNav {
+    width: 50px;
+    height: 50px;
+    opacity: 80%;
+    cursor: pointer;
+    padding: 13px 20px;
+    transition: 0.2s;
+}
+
+button:hover {
+    opacity: 100%;
+}
+
+.li:hover {
+    transition: 0.1s;
+    color: #8c00ff;
+    position: relative;
+    margin-top: -4px;
+}
+
+.checked+.li .imgNav {
+    color: #00c6ff;
+    fill-rule: evenodd;
+}
+
 
 .icono-casa {
 
@@ -205,62 +266,6 @@ h2 {
 }
 
 
-nav {
-    display: flex;
-    height: 60px;
-    border-radius: 40px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    padding-top: 1cm;
-    width: 100%;
-    border: none;
-
-}
-
-.ul {
-    width: 100%;
-    background-color: transparent;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 5px;
-}
-
-.ul .li {
-    display: inline-block;
-    background: none;
-    border: none;
-}
-
-.radio {
-    display: none;
-}
-
-.imgNav {
-    width: 50px;
-    height: 50px;
-    opacity: 80%;
-    cursor: pointer;
-    padding: 13px 20px;
-    transition: 0.2s;
-}
-
-button:hover {
-    transition: 0.1s;
-    color: #8c00ff;
-    position: relative;
-    margin-top: -4px;
-    opacity: 100%;
-}
-
-
-
-.checked+.li .imgNav {
-    color: #00c6ff;
-    fill-rule: evenodd;
-}
-
-
 /* perfil */
 .perfil {
     padding: 20px;
@@ -284,17 +289,23 @@ button:hover {
     grid-row-end: 3;
     width: 100px;
     height: 100px;
-    background-color: #c0c0c0;
+    background-color: #222;
     border-radius: 50%;
     margin-right: 20px;
 }
 
 .serie-img-perfil {
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100px;
     object-fit: cover;
     transition: filter 0.3s ease;
     border-radius: 50%;
+    background-color: #222;
+    
+}
+
+.serie-img-perfil:hover {
+    filter: blur(3px);
 }
 
 .descripcion {
@@ -430,7 +441,7 @@ h2 {
     cursor: pointer;
 }
 
-button:hover {
+.aceptar:hover {
     background: #8c00ff;
 }
 
@@ -441,11 +452,11 @@ button:hover {
     margin: 0;
     padding: 45px;
     border-radius: 10px;
-    white-space: normal; 
+    white-space: normal;
     display: flex;
-    flex-direction: column; 
-    overflow-y: scroll; 
-    gap: 10px; 
+    flex-direction: column;
+    overflow-y: scroll;
+    gap: 10px;
 }
 
 .contenedor-series-fav {
@@ -454,7 +465,7 @@ button:hover {
     gap: 10px;
 }
 
-.fav{
+.fav {
     text-align: center;
 }
 
