--- a/Episodicos_Precentacion/src/main/webapp/GestionSerie/style.css
+++ b/Episodicos_Precentacion/src/main/webapp/GestionSerie/style.css
@@ -50,17 +50,8 @@ header {
     width: 95.7%;
 }
 
-.icono-casa {
-
-    font-size: 30px;
-    position: absolute;
-    left: 45%;
-}
-
-.usuario {
-    font-size: 18px;
-    position: absolute;
-    right: 10px;
+button{
+    border: none;
 }
 
 .seccion,
@@ -234,7 +225,7 @@ nav {
     transition: 0.2s;
 }
 
-button:hover {
+.li:hover {
     transition: 0.1s;
     color: #8c00ff;
     position: relative;
