--- a/Episodicos_Precentacion/src/main/webapp/Feed/Style.css
+++ b/Episodicos_Precentacion/src/main/webapp/Feed/Style.css
@@ -1,3 +1,32 @@
+/* 
+    Created on : 28 oct 2024, 11:59:23 p.m.
+    Author     : jesus
+*/
+body {
+    font-family: Arial, sans-serif;
+    background: linear-gradient(to right, #8c00ff, #00c6ff);
+}
+
+.Feed {
+    background-color: #222;
+    margin: 0px 50vh;
+    overflow: hidden;
+    padding: 20px;
+    border-radius: 10px;
+    height: auto;
+}
+/* barra de navegación*/
+header {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    color: white;
+    border-radius: 10px;
+    padding-bottom: 1cm;
+    width: 100%;
+    overflow: hidden;
+
+}
+
 body {
     font-family: Arial, sans-serif;
     background: linear-gradient(to right, #8c00ff, #00c6ff);
@@ -24,43 +53,63 @@ header {
     width: 95.7%;
 }
 
-.icono-casa {
 
-    font-size: 30px;
-    position: absolute;
-    left: 45%;
-}
-
-.usuario {
-    font-size: 18px;
-    position: absolute;
-    right: 10px;
-}
-
-.seccion,
-.resenas-recientes {
-
-    padding: 20px;
-    border-radius: 10px;
-    white-space: nowrap;
-    box-shadow: inset 0 0 20px #ffffff42;
-}
-
-.seccion {
-
+nav {
     display: flex;
-    overflow-x: scroll;
+    height: 60px;
+    border-radius: 40px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    padding-top: 1cm;
+    width: 100%;
+    border: none;
+
 }
 
-.resenas-recientes {
+.ul {
+    width: 100%;
+    background-color: transparent;
     display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
-    height: 230px;
+    justify-content: space-between;
+    margin-top: 5px;
+}
+
+.ul .li {
+    display: inline-block
 }
 
 button {
     border: none;
+}
+
+.radio {
+    display: none;
+}
+
+.imgNav {
+    width: 50px;
+    height: 50px;
+    opacity: 80%;
+    cursor: pointer;
+    padding: 13px 20px;
+    transition: 0.2s;
+}
+
+button:hover {
+    opacity: 100%;
+}
+
+.li:hover {
+    transition: 0.1s;
+    color: #8c00ff;
+    position: relative;
+    margin-top: -4px;
+}
+
+.checked+.li .imgNav {
+    color: #00c6ff;
+    fill-rule: evenodd;
 }
 
 
@@ -69,6 +118,33 @@ h2 {
     margin-bottom: 10px;
 }
 
+/* Secciones */
+.seccion,
+.resenas-recientes {
+
+    display: block;
+    padding: 20px;
+    border-radius: 10px;
+    white-space: nowrap;
+    box-shadow: inset 0 0 20px #ffffff42;
+    overflow: hidden;
+}
+
+.seccion {
+
+    display: flex;
+    overflow-x: auto; 
+    flex-wrap: nowrap;
+}
+
+.resenas-recientes {
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    height: 230px;
+}
+
+/* scroll a un lado */
 .contenedor-series {
     display: flex;
     gap: 10px;
@@ -117,6 +193,7 @@ h2 {
     opacity: 1;
 }
 
+/* scroll hacia a un lado*/
 .resena {
 
     display: grid;
@@ -127,22 +204,37 @@ h2 {
     padding: 15px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     width: 95%;
+    height: 400px;
     flex: 1;
-    margin-bottom: 15px;
+    margin-top: 15px;
 }
 
 
 .titulo-resena {
+    display: grid;
+    grid-template-columns: 50% 50%;
     grid-column-start: 1;
     grid-column-end: 4;
     font-size: 16px;
     font-weight: bold;
-    margin-bottom: 10px;
     width: 100%;
 }
 
+.tipo, .nombre, .titulo{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    color: #222;
+}
+
+.fecha{
+
+    grid-column-start: 2;
+    grid-column-end: 3;
+    color: #222;
+}
 
 .texto-resena {
+    margin-top: 90px;
     padding-right: 15px;
     margin-right: 15px;
     margin-left: 10px;
@@ -150,10 +242,21 @@ h2 {
     word-wrap: break-word;
     overflow-wrap: break-word;
     white-space: normal;
-    overflow-y: scroll;
+    overflow-y: auto;
 
 }
 
+.texto-resena2{
+    margin-top: 40px;
+    padding-right: 15px;
+    margin-right: 15px;
+    margin-left: 10px;
+    text-align: justify;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+    overflow-y: auto;
+}
 
 .imagen-resena {
 
@@ -164,65 +267,49 @@ h2 {
     font-size: 12px;
     color: #555;
     width: 100px;
-    height: 150px;
     border-radius: 10px;
     margin-left: 6px;
     overflow: hidden;
     border-radius: 15px;
+    margin-top: 120px;
 }
 
+.comentar{
 
-nav {
-    display: flex;
-    height: 60px;
-    border-radius: 40px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    padding-top: 1cm;
-    width: 100%;
+    width: 120px;
+    height: 40px;
+    margin-top: 30px;
+    border-radius: 20pc;
+    background-color: goldenrod;
+    color: #222;
+    font-weight: 700;
+}
+
+.comentar:hover{
+
+    background-color: rgb(184, 43, 43);
+    color: #ffffff;
+}
+
+.comentar2{
+
+    width: 120px;
+    height: 40px;
+    margin-top: 70px;
+    border-radius: 20pc;
+    background-color: goldenrod;
+    color: #222;
+    font-weight: 700;
+}
+
+.comentar2:hover{
+
+    background-color: rgb(184, 43, 43);
+    color: #ffffff;
+}
+
+.id{
+    background-color: rgb(214, 212, 212);
     border: none;
-
-}
-
-.ul {
-    width: 100%;
-    background-color: transparent;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 5px;
-}
-
-.ul .li {
-    display: inline-block;
-    background: none;
-    border: none;
-}
-
-.radio {
-    display: none;
-}
-
-.imgNav {
-    width: 50px;
-    height: 50px;
-    opacity: 80%;
-    cursor: pointer;
-    padding: 13px 20px;
-    transition: 0.2s;
-}
-
-.li:hover {
-    transition: 0.1s;
-    color: #8c00ff;
-    position: relative;
-    margin-top: -4px;
-    opacity: 100%;
-}
-
-
-
-.checked+.li .imgNav {
-    color: #00c6ff;
-    fill-rule: evenodd;
+    color: rgb(214, 212, 212);
 }
