--- a/Episodicos_Precentacion/src/main/webapp/GestionSerie/style.css
+++ b/Episodicos_Precentacion/src/main/webapp/GestionSerie/style.css
@@ -12,182 +12,24 @@ body {
 }
 
 /*navegacion*/
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    color: white;
-    position: relative; 
-    height: 4vh;
-    border-radius: 10px;
-    padding-bottom: 1cm;
-    width: 95.7%;
-}
-body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(to right, #8c00ff, #00c6ff);
-}
-
-.Feed {
-    background-color: #222;
-    margin: 10px 50vh;
-
-    padding: 20px;
-    border-radius: 10px;
-}
 
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    color: white;
-    position: relative;
-    height: 4vh;
-    border-radius: 10px;
-    padding-bottom: 1cm;
-    width: 95.7%;
-}
-
-button{
-    border: none;
-}
-
-.seccion,
-.resenas-recientes {
-
-    padding: 20px;
-    border-radius: 10px;
-    white-space: nowrap;
-    box-shadow: inset 0 0 20px #ffffff42;
-}
-
-.seccion {
-
-    display: flex;
-    overflow-x: scroll;
-}
-
-.resenas-recientes {
-    display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
-    height: 230px;
-}
-
-
-h2 {
-    color: white;
-    margin-bottom: 10px;
-}
-
-.contenedor-series {
-    display: flex;
-    gap: 10px;
-}
-
-.serie {
-    background-color: #f0f0f0;
-    width: 100px;
-    height: 150px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.serie .info {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    font-size: 14px;
-    color: rgb(255, 255, 255);
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    z-index: 2;
-}
-
-.serie-img {
-
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: filter 0.3s ease;
-}
-
-
-.serie:hover .serie-img {
-    filter: blur(3px);
-}
-
-.serie:hover .info {
-    opacity: 1;
-}
-
-.resena {
-
-    display: grid;
-    grid-template-columns: 80% 10% 10%;
-    grid-template-rows: 20% 80%;
-    background-color: rgb(214, 212, 212);
-    border-radius: 10px;
-    padding: 15px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    width: 95%;
-    flex: 1;
-    margin-bottom: 15px;
-}
-
-
-.titulo-resena {
     grid-column-start: 1;
-    grid-column-end: 4;
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    width: 100%;
-}
-
-
-.texto-resena {
-    padding-right: 15px;
-    margin-right: 15px;
-    margin-left: 10px;
-    text-align: justify;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    white-space: normal;
-    overflow-y: scroll;
-
-}
-
-
-.imagen-resena {
-
-    grid-column-start: 2;
-    grid-column-end: 4;
-    flex: 3;
+    grid-column-end: 3;
     display: flex;
-    font-size: 12px;
-    color: #555;
-    width: 100px;
-    height: 150px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    color: white;
+    position: relative;
+    height: 4vh;
     border-radius: 10px;
-    margin-left: 6px;
-    overflow: hidden;
-    border-radius: 15px;
+    padding-bottom: 1cm;
+    width: 90%;
 }
-
 
 nav {
     display: flex;
-    height: 60px;
     border-radius: 40px;
     align-items: center;
     justify-content: center;
@@ -199,16 +41,65 @@ nav {
 }
 
 .ul {
-    width: 100%;
+    width: 90%;
     background-color: transparent;
     display: flex;
     justify-content: space-between;
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 .ul .li {
-    display: inline-block;
+    display: inline-block
+}
+
+.ul {
+    align-items: center;
+    background-image: linear-gradient(144deg, #00DDEB, #5B42F3 50%, #AF40FF );
+    border: 0;
+    border-radius: 5px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    display: flex;
+    font-family: Phantomsans, sans-serif;
+    font-size: 20px;
+    justify-content: center;
+    line-height: 1em;
+    padding: 3px;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
+    height: 80px;
+}
+
+.ul active,
+.ul:hover {
+    outline: 0;
+}
+
+.ul span {
+    background-color: rgb(5, 6, 45);
+    padding: 16px 24px;
+    border-radius: 6px;
+    height: 100%;
+    transition: 300ms;
+}
+
+.ul:hover span {
     background: none;
+}
+
+@media (min-width: 0) {
+    .ul {
+        font-size: 24px;
+        min-width: 160px;
+    }
+}
+
+.ul {
     border: none;
 }
 
@@ -225,21 +116,23 @@ nav {
     transition: 0.2s;
 }
 
+button:hover {
+    opacity: 100%;
+}
+
 .li:hover {
     transition: 0.1s;
     color: #8c00ff;
     position: relative;
     margin-top: -4px;
-    opacity: 100%;
 }
-
-
 
 .checked+.li .imgNav {
     color: #00c6ff;
     fill-rule: evenodd;
 }
-  
+
+
 /* Título */
 h2 {
     text-align: center;
