--- a/Episodicos_Precentacion/src/main/webapp/SeriesProfile/Style.css
+++ b/Episodicos_Precentacion/src/main/webapp/SeriesProfile/Style.css
@@ -1,12 +1,4 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css to edit this template
-*/
-/* 
-    Created on : 28 oct 2024, 11:59:23 p.m.
-    Author     : favel
-*/
-
+/* General */
 body {
     font-family: Arial, sans-serif;
     background: linear-gradient(to right, #8c00ff, #00c6ff);
@@ -24,31 +16,10 @@ body {
     height: auto;
 }
 
-/* barra de navegación*/
+/* barra de navegacion */
 header {
     grid-column-start: 1;
     grid-column-end: 3;
-    color: white;
-    border-radius: 10px;
-    padding-bottom: 1cm;
-    width: 100%;
-    overflow: hidden;
-
-}
-body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(to right, #8c00ff, #00c6ff);
-}
-
-.Feed {
-    background-color: #222;
-    margin: 10px 50vh;
-
-    padding: 20px;
-    border-radius: 10px;
-}
-
-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -58,156 +29,11 @@ header {
     height: 4vh;
     border-radius: 10px;
     padding-bottom: 1cm;
-    width: 95.7%;
+    width: 90%;
 }
-
-.icono-casa {
-
-    font-size: 30px;
-    position: absolute;
-    left: 45%;
-}
-
-.usuario {
-    font-size: 18px;
-    position: absolute;
-    right: 10px;
-}
-
-.seccion,
-.resenas-recientes {
-
-    padding: 20px;
-    border-radius: 10px;
-    white-space: nowrap;
-    box-shadow: inset 0 0 20px #ffffff42;
-}
-
-.seccion {
-
-    display: flex;
-    overflow-x: scroll;
-}
-
-.resenas-recientes {
-    display: flex;
-    flex-direction: column;
-    overflow-y: scroll;
-    height: 230px;
-}
-
-
-h2 {
-    color: white;
-    margin-bottom: 10px;
-}
-
-.contenedor-series {
-    display: flex;
-    gap: 10px;
-}
-
-.serie {
-    background-color: #f0f0f0;
-    width: 100px;
-    height: 150px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.serie .info {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    font-size: 14px;
-    color: rgb(255, 255, 255);
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    z-index: 2;
-}
-
-.serie-img {
-
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: filter 0.3s ease;
-}
-
-
-.serie:hover .serie-img {
-    filter: blur(3px);
-}
-
-.serie:hover .info {
-    opacity: 1;
-}
-
-.resena {
-
-    display: grid;
-    grid-template-columns: 80% 10% 10%;
-    grid-template-rows: 20% 80%;
-    background-color: rgb(214, 212, 212);
-    border-radius: 10px;
-    padding: 15px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    width: 95%;
-    flex: 1;
-    margin-bottom: 15px;
-}
-
-
-.titulo-resena {
-    grid-column-start: 1;
-    grid-column-end: 4;
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    width: 100%;
-}
-
-
-.texto-resena {
-    padding-right: 15px;
-    margin-right: 15px;
-    margin-left: 10px;
-    text-align: justify;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-    white-space: normal;
-    overflow-y: scroll;
-
-}
-
-
-.imagen-resena {
-
-    grid-column-start: 2;
-    grid-column-end: 4;
-    flex: 3;
-    display: flex;
-    font-size: 12px;
-    color: #555;
-    width: 100px;
-    height: 150px;
-    border-radius: 10px;
-    margin-left: 6px;
-    overflow: hidden;
-    border-radius: 15px;
-}
-
 
 nav {
     display: flex;
-    height: 60px;
     border-radius: 40px;
     align-items: center;
     justify-content: center;
@@ -219,23 +45,70 @@ nav {
 }
 
 .ul {
-    width: 100%;
+    width: 90%;
     background-color: transparent;
     display: flex;
     justify-content: space-between;
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 .ul .li {
-    display: inline-block;
+    display: inline-block
+}
+
+.ul {
+    align-items: center;
+    background-image: linear-gradient(144deg, #00DDEB, #5B42F3 50%, #AF40FF );
+    border: 0;
+    border-radius: 5px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    display: flex;
+    font-family: Phantomsans, sans-serif;
+    font-size: 20px;
+    justify-content: center;
+    line-height: 1em;
+    padding: 3px;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
+    height: 80px;
+}
+
+.ul active,
+.ul:hover {
+    outline: 0;
+}
+
+.ul span {
+    background-color: rgb(5, 6, 45);
+    padding: 16px 24px;
+    border-radius: 6px;
+    height: 100%;
+    transition: 300ms;
+}
+
+.ul:hover span {
     background: none;
+}
+
+@media (min-width: 0) {
+    .ul {
+        font-size: 24px;
+        min-width: 160px;
+    }
+}
+
+.ul {
+    border: none;
 }
 
 .radio {
     display: none;
-    border: none;
-    outline: none;
-    box-shadow: none;
 }
 
 .imgNav {
@@ -247,15 +120,15 @@ nav {
     transition: 0.2s;
 }
 
-.checked+.li .imgNav:hover {
-    transition: 0.1s;
-    position: relative;
-    margin-top: -4px;
+button:hover {
     opacity: 100%;
 }
 
-.radio:hover{
+.li:hover {
+    transition: 0.1s;
     color: #8c00ff;
+    position: relative;
+    margin-top: -4px;
 }
 
 .checked+.li .imgNav {
@@ -309,7 +182,6 @@ nav {
 
 /* secciones */
 .seccion {
-
     margin: 0;
     margin-top: 0px;
     padding: 20px;
@@ -358,7 +230,6 @@ h2 {
 }
 
 .serie-img {
-
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -373,11 +244,10 @@ h2 {
     opacity: 1;
 }
 
-/*Escribir una reseña*/
+/* reseña */
 .nueva-resena {
     grid-row-start: 4;
     grid-row-end: 5;
-
 }
 
 .form {
@@ -435,11 +305,8 @@ button {
     cursor: pointer;
 }
 
-.li:hover {
-    background: #8c00ff;
-}
 
-/*peliculas favoritas*/
+/* favoritas */
 .favoritas {
     grid-row-start: 4;
     grid-row-end: 9;
@@ -459,11 +326,11 @@ button {
     gap: 10px;
 }
 
-.fav{
+.fav {
     text-align: center;
 }
 
-/*reseñas recientes*/
+/* Recent Reviews */
 .resenas-recientes {
     display: flex;
     flex-direction: column;
@@ -472,7 +339,6 @@ button {
 }
 
 .resena {
-
     display: grid;
     grid-template-columns: 70% 15% 15%;
     grid-template-rows: 10% 90%;
@@ -493,7 +359,6 @@ button {
     width: 100%;
 }
 
-
 .texto-resena {
     padding-right: 15px;
     margin-right: 15px;
@@ -503,11 +368,9 @@ button {
     overflow-wrap: break-word;
     white-space: normal;
     overflow-y: scroll;
-
 }
 
 .imagen-resena {
-
     grid-column-start: 2;
     grid-column-end: 4;
     flex: 3;
